[gd_scene format=3 uid="uid://c8p7yqgr0qv1x"]

[ext_resource type="Script" uid="uid://dpyg2l1qraxbj" path="res://scripts/LeaderboardUI.gd" id="1_37mli"]
[ext_resource type="Theme" uid="uid://c0jn3dnnk56d4" path="res://theme1.tres" id="1_dsup0"]

[node name="LeaderboardUI" type="Control" unique_id=452041036]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dsup0")
script = ExtResource("1_37mli")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1167597595]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="." unique_id=604816203]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=1127758452]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer" unique_id=481017380]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "LEADERBOARD"
horizontal_alignment = 1

[node name="HeaderRow" type="HBoxContainer" parent="Panel/VBoxContainer" unique_id=2124308458]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="RankHeader" type="Label" parent="Panel/VBoxContainer/HeaderRow" unique_id=209110695]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Rank"
horizontal_alignment = 1

[node name="NameHeader" type="Label" parent="Panel/VBoxContainer/HeaderRow" unique_id=195511567]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Name"

[node name="ScoreHeader" type="Label" parent="Panel/VBoxContainer/HeaderRow" unique_id=751556271]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Score  "
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer" unique_id=2073957584]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer" unique_id=2072698377]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaderboardContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer" unique_id=175885]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer" unique_id=1663936351]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "CLOSE"
